# CMakeList.txt : CMake project for RidiculousBruteForcing, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("RidiculousBruteForcing")

# Add source to this project's executable.
add_executable (RidiculousBruteForcing "RidiculousBruteForcing.cpp")

# TODO: Add tests and install targets if needed.
